# UsersManagementService

./: .coverage  .coveragerc  .dockerignore  .env  .env.test  .gitignore  .test.env  Dockerfile  alembic.ini  docker-compose.test.yml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml  python-app.yml  python_app.yml  python_workflow.yml  users_manager_service_workflow.yml
alembic/: env.py
alembic/versions/: 0ba29cda6a9f_initial_tables.py  14ff52dbba5b_initial_tables.py  1f901c540024_initial_tables.py  2024-04-24_autogenerated_migration.py  23bde001a495_initial_tables.py  3254dd909dd8_initial_tables.py  39cd55acfada_initial_tables.py  4b1f4d6ab29a_initial_tables.py  58c677fee32f_initial_tables.py  6f7c65e1c311_initial_tables.py  73cebf5e09c3_autogenerated_migration.py  7c153ea4ccdf_initial_tables.py  8314c1d2c169_initial_tables.py  87c58ab9d1e0_initial_tables.py  8981dc63b9f1_initial_tables.py  98924d1ffacd_initial_tables.py  996a1885aae6_.py  a4070e03421c_autogenerated_migration.py  b4a4133fb45a_initial_tables.py  bc53ae2f95c6_.py  c02eb91acdab_initial_tables.py  c4fd925836d7_.py  c89de169f2b7_autogenerated_migration.py  fb193d94eaac_initial_tables.py  fecdb21e5e00_initial_tables.py
k8s/: k8s.yaml
src/: main.py
src/adapters/: exceptions.py
src/auth/: auth.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py  test.py
src/common/: common.py  config.py  router.py  security.py
src/config/: database.py  settings.py
src/converter/: converters.py
src/database/: database.py  models.py
src/dependencies/: core.py
src/rabbitmq/: publisher.py
src/to_delete/: schemas.py  schemas_old.py
src/use_cases/: auth_use_cases.py  exceptions.py  users_use_cases.py
src/users/: aws_s3.py  exceptions.py  models.py  router.py  schemas.py  service.py  users.py  users_router.py
src/utils/: converters.py
tests/: conftest.py
tests/auth/: auth_tests.py  test_auth.py
(+32 files in other folders)
